--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>TechCon 2024 Conference</title>
+</head>
+<body>
+
+  <header>
+    <h1>TechCon 2024</h1>
+    <nav aria-label="Primary navigation">
+      <ul>
+        <li><a href="about.html">About</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section aria-labelledby="intro-title">
+      <h2 id="intro-title">Welcome to TechCon 2024</h2>
+      <p>Join us for a cutting-edge technology conference featuring industry leaders, hands-on workshops, and networking opportunities.</p>
+
+      <video controls width="640" preload="metadata" aria-describedby="video-desc">
+        <source src="promo-video.mp4" type="video/mp4" />
+        <track src="promo-video-en.vtt" kind="subtitles" srclang="en" label="English" default />
+        Sorry, your browser does not support the video tag.
+      </video>
+      <p id="video-desc" hidden>
+        This promotional video showcases highlights of TechCon 2024, including keynote speakers, workshops, and networking events.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>Copyright © 2024 TechCon Conference</p>
+  </footer>
+
+</body>
+</html>
 
