--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -24,11 +24,10 @@
       <h2 id="intro-title">Welcome to TechCon 2024</h2>
       <p>Join us for a cutting-edge technology conference featuring industry leaders, hands-on workshops, and networking opportunities.</p>
 
-      <video controls width="640" preload="metadata" aria-describedby="video-desc">
-        <source src="promo-video.mp4" type="video/mp4" />
-        <track src="promo-video-en.vtt" kind="subtitles" srclang="en" label="English" default />
-        Sorry, your browser does not support the video tag.
-      </video>
+   <blockquote class="twitter-tweet">
+      <a href="https://twitter.com/Twitter/status/1261326399320715264"></a>
+    </blockquote>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       <p id="video-desc" hidden>
         This promotional video showcases highlights of TechCon 2024, including keynote speakers, workshops, and networking events.
       </p>
