--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -20,19 +20,16 @@
   </header>
 
   <main>
-    <section aria-labelledby="intro-title">
-      <h2 id="intro-title">Welcome to TechCon 2024</h2>
-      <p>Join us for a cutting-edge technology conference featuring industry leaders, hands-on workshops, and networking opportunities.</p>
-  <!-- Embedded Tweet with Video -->
-    <blockquote class="twitter-tweet">
-      <a href="https://x.com/UN_OICT/status/1886472801961324937"></a>
-    </blockquote>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-      <p id="video-desc" hidden>
-        This promotional video showcases highlights of TechCon 2024, including keynote speakers, workshops, and networking events.
-      </p>
+    <section aria-labelledby="conference-intro">
+      <h2 id="conference-intro">Welcome to TechCon 2024</h2>
+      <p>Join us for an exciting technology conference featuring inspiring speakers, interactive workshops, and networking opportunities.</p>
+
+      <!-- Embedded Tweet with Video -->
+      <blockquote class="twitter-tweet">
+        <a href="https://x.com/UN_OICT/status/1886472801961324937"></a>
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
     </section>
   </main>
 
@@ -42,4 +39,5 @@
 
 </body>
 </html>
+
 
