--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -24,12 +24,19 @@
       <h2 id="conference-intro">Welcome to TechCon 2024</h2>
       <p>Join us for an exciting technology conference featuring inspiring speakers, interactive workshops, and networking opportunities.</p>
 
+      <!-- Native Video with controls -->
+      <video controls width="640" preload="metadata" aria-describedby="video-desc">
+        <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm" type="video/webm" />
+        <track src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower-en.vtt" kind="subtitles" srclang="en" label="English" default />
+        Sorry, your browser does not support the video tag.
+      </video>
+      <p id="video-desc" hidden>This promotional video highlights key speakers and events at TechCon 2024.</p>
+
       <!-- Embedded Tweet with Video -->
       <blockquote class="twitter-tweet">
         <a href="https://x.com/UN_OICT/status/1886472801961324937"></a>
       </blockquote>
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
     </section>
   </main>
 
@@ -39,5 +46,3 @@
 
 </body>
 </html>
-
-
