--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -25,7 +25,10 @@
       <p>Join us for an exciting technology conference featuring inspiring speakers, interactive workshops, and networking opportunities.</p>
 
      
-      <p id="video-desc" hidden>This promotional video highlights key speakers and events at TechCon 2024.</p>
+    
+<p id="video-desc" style="position:absolute; left:-9999px; width:1px; height:1px; overflow:hidden;">
+  This promotional video highlights key speakers and events at TechCon 2024.
+</p>
 
       <!-- Embedded Tweet with Video -->
       <blockquote class="twitter-tweet">
