--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -29,12 +29,8 @@
 <p id="video-desc" style="position:absolute; left:-9999px; width:1px; height:1px; overflow:hidden;">
   This promotional video highlights key speakers and events at TechCon 2024.
 </p>
-
-      <!-- Embedded Tweet with Video -->
-      <blockquote class="twitter-tweet">
-        <a href="https://x.com/UN_OICT/status/1886472801961324937"></a>
-      </blockquote>
-      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tMhZtE-Cwn8?si=Gu4CUnK77We-UP5t" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
     </section>
   </main>
 
