--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -24,16 +24,13 @@
   <h2 id="conference-intro">Welcome to TechCon 2024</h2>
   <p>Join us for an exciting technology conference featuring inspiring speakers, interactive workshops, and networking opportunities.</p>
 
-  <div style="position:relative; padding-bottom:56.25%; height:0; overflow:hidden; max-width:100%;">
-    <iframe
-      src="https://www.youtube.com/embed/tMhZtE-Cwn8?si=izQ-lyNFVYt3zrIj"
-      title="TechCon 2024 Promotional Video"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen
-      style="position:absolute; top:0; left:0; width:100%; height:100%;">
-    </iframe>
-  </div>
+      <!-- Embedded video using <video> -->
+      <video controls width="640" aria-describedby="video-desc">
+        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+        <track src="captions.vtt" kind="subtitles" srclang="en" label="English">
+        Your browser does not support the video tag.
+      </video>
+ 
 </section>
 
   </main>
