--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -25,12 +25,11 @@
   <p>Join us for an exciting technology conference featuring inspiring speakers, interactive workshops, and networking opportunities.</p>
 
       <!-- Embedded video using <video> -->
-      <video controls width="640" aria-describedby="video-desc">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-        <track src="captions.vtt" kind="subtitles" srclang="en" label="English">
-        Your browser does not support the video tag.
-      </video>
- 
+     <video controls width="640" aria-describedby="video-desc">
+    <source src="techcon2024-promo.mp4" type="video/mp4">
+    <track src="captions.vtt" kind="subtitles" srclang="en" label="English">
+    Your browser does not support the video tag.
+  </video>
 </section>
 
   </main>
