--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -25,9 +25,8 @@
   <p>Join us for an exciting technology conference featuring inspiring speakers, interactive workshops, and networking opportunities.</p>
 
       <!-- Embedded video using <video> -->
-     <video controls width="640" aria-describedby="video-desc">
-    <source src="techcon2024-promo.mp4" type="video/mp4">
-    <track src="captions.vtt" kind="subtitles" srclang="en" label="English">
+    <video controls width="640" aria-describedby="video-desc">
+    <source src="53c693c9-a4b6-46f6-8feb-887b11fbab0f.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </section>
