--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -1,1 +1,74 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>About TechCon 2024</title>
+  <style>
+    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; }
+    header, nav, main, footer { padding: 20px; }
+    nav ul { list-style: none; display: flex; gap: 15px; padding: 0; }
+    nav a { text-decoration: none; color: #0066cc; }
+    img { max-width: 100%; height: auto; }
+    article { margin-bottom: 40px; }
+    footer { background: #f1f1f1; text-align: center; font-size: 0.9em; }
+  </style>
+</head>
+
+<body>
+  <!-- Header -->
+  <header>
+    <h1>About TechCon 2024</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Main Content -->
+  <main>
+    <!-- History Section -->
+    <article id="history">
+      <h2>Our History</h2>
+      <p>TechCon began in 2010 as a grassroots gathering for technology enthusiasts. Over the years, it has grown into one of the premier global events for developers, innovators, and tech leaders.</p>
+      <img src="images/techcon_history.jpg" alt="TechCon attendees in 2012">
+    </article>
+
+    <!-- Mission Section -->
+    <article id="mission">
+      <h2>Our Mission</h2>
+      <p>TechCon’s mission is to empower the global tech community through knowledge sharing, networking, and innovation. We believe in open access to technology and ideas that shape the future.</p>
+      <img src="images/mission_icon.png" alt="TechCon mission icon">
+    </article>
+
+    <!-- Past Speakers Section -->
+    <article id="past-speakers">
+      <h2>Notable Past Speakers</h2>
+
+      <div>
+        <img src="images/speaker_jane.jpg" alt="Jane Doe speaking at TechCon">
+        <p><strong>Jane Doe</strong>: AI researcher and CEO of FutureTech, known for her work on ethical AI and machine learning in healthcare.</p>
+      </div>
+
+      <div>
+        <img src="images/speaker_raj.jpg" alt="Raj Patel speaking at TechCon">
+        <p><strong>Raj Patel</strong>: Cybersecurity expert who has helped shape global policy on digital safety and privacy.</p>
+      </div>
+
+      <div>
+        <img src="images/speaker_lina.jpg" alt="Lina Zhou speaking at TechCon">
+        <p><strong>Lina Zhou</strong>: Founder of Code for Change, an advocate for accessible programming education in developing nations.</p>
+      </div>
+    </article>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 TechCon. All rights reserved.</p>
+  </footer>
+</body>
+</html>
