--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -1,1 +1,95 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Schedule for TechCon 2024</title>
+  <style>
+    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; }
+    header, nav, main, footer { padding: 20px; }
+    nav ul { list-style: none; display: flex; gap: 15px; padding: 0; }
+    nav a { text-decoration: none; color: #0066cc; }
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+    th, td { border: 1px solid #ddd; padding: 10px; text-align: left; }
+    th { background-color: #f2f2f2; }
+    caption { font-weight: bold; margin-bottom: 10px; }
+    footer { background: #f1f1f1; text-align: center; font-size: 0.9em; }
+  </style>
+</head>
+
+<body>
+  <!-- Header -->
+  <header>
+    <h1>Schedule for TechCon 2024</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Main Content -->
+  <main>
+    <table>
+      <caption>Detailed Schedule of Events for TechCon 2024</caption>
+      <thead>
+        <tr>
+          <th scope="col">Time</th>
+          <th scope="col">Session</th>
+          <th scope="col">Speaker</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>09:00 - 10:00</td>
+          <td>Opening Keynote: The Future of AI</td>
+          <td>Jane Doe</td>
+        </tr>
+        <tr>
+          <td>10:15 - 11:00</td>
+          <td>Cybersecurity in a Decentralized World</td>
+          <td>Raj Patel</td>
+        </tr>
+        <tr>
+          <td>11:15 - 12:00</td>
+          <td>Tech for Good: Building Inclusive Tools</td>
+          <td>Lina Zhou</td>
+        </tr>
+        <tr>
+          <td>12:00 - 13:00</td>
+          <td>Lunch Break</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>13:00 - 14:00</td>
+          <td>Panel: Ethics in Emerging Technologies</td>
+          <td>Multiple Speakers</td>
+        </tr>
+        <tr>
+          <td>14:15 - 15:00</td>
+          <td>Workshops: Choose Your Track</td>
+          <td>Various</td>
+        </tr>
+        <tr>
+          <td>15:15 - 16:00</td>
+          <td>Fireside Chat: Women in Tech</td>
+          <td>Dr. Angela Morris</td>
+        </tr>
+        <tr>
+          <td>16:15 - 17:00</td>
+          <td>Closing Ceremony & Awards</td>
+          <td>Conference Organizers</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 TechCon. All rights reserved.</p>
+  </footer>
+</body>
+</html>
