--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -29,11 +29,10 @@
   <source src="53c693c9-a4b6-46f6-8feb-887b11fbab0f.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
-
-</section>
-
+   </section>
   </main>
-
+  
+  <!-- Footer -->
   <footer>
     <p>Copyright © 2024 TechCon Conference</p>
   </footer>
