--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>About TechCon 2024</title>
-  <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; }
-    header, nav, main, footer { padding: 20px; }
-    nav ul { list-style: none; display: flex; gap: 15px; padding: 0; }
-    nav a { text-decoration: none; color: #0066cc; }
-    img { max-width: 100%; height: auto; }
-    article { margin-bottom: 40px; }
-    footer { background: #f1f1f1; text-align: center; font-size: 0.9em; }
-  </style>
 </head>
-
 <body>
-  <!-- Header -->
+
+  <!-- Header Section -->
   <header>
     <h1>About TechCon 2024</h1>
     <nav>
@@ -30,43 +21,44 @@
 
   <!-- Main Content -->
   <main>
-    <!-- History Section -->
-    <article id="history">
-      <h2>Our History</h2>
-      <p>TechCon began in 2010 as a grassroots gathering for technology enthusiasts. Over the years, it has grown into one of the premier global events for developers, innovators, and tech leaders.</p>
-      <img src="images/techcon_history.jpg" alt="TechCon attendees in 2012">
+
+    <!-- History Article -->
+    <article>
+      <h2>History</h2>
+      <p>TechCon began in 2010 with the mission of connecting innovators and thought leaders across the global tech community. Over the years, it has grown into a premier event attracting thousands of attendees annually.</p>
+      <img src="images/history.jpg" alt="Historical photo from TechCon 2010" width="300">
     </article>
 
-   <!-- Mission Section -->
-    <article id="mission">
-      <h2>Our Mission</h2>
-      <p>TechCon’s mission is to empower the global tech community through knowledge sharing, networking, and innovation. We believe in open access to technology and ideas that shape the future.</p>
-      <img src="images/mission_icon.png" alt="TechCon mission icon">
+    <!-- Mission Article -->
+    <article>
+      <h2>Mission</h2>
+      <p>TechCon aims to inspire, educate, and empower the next generation of technology leaders through meaningful discussion, networking, and collaboration.</p>
+      <img src="images/mission.jpg" alt="People collaborating at TechCon" width="300">
     </article>
 
-    <!-- Past Speakers Section -->
-    <article id="past-speakers">
-      <h2>Notable Past Speakers</h2>
-      <div>
-        <img src="images/speaker_jane.jpg" alt="Jane Doe speaking at TechCon">
-        <p><strong>Jane Doe</strong>: AI researcher and CEO of FutureTech, known for her work on ethical AI and machine learning in healthcare.</p>
-      </div>
-      <div>
-        <img src="images/speaker_raj.jpg" alt="Raj Patel speaking at TechCon">
-        <p><strong>Raj Patel</strong>: Cybersecurity expert who has helped shape global policy on digital safety and privacy.</p>
-      </div>
-       <div>
-        <img src="images/speaker_lina.jpg" alt="Lina Zhou speaking at TechCon">
-        <p><strong>Lina Zhou</strong>: Founder of Code for Change, an advocate for accessible programming education in developing nations.</p>
-      </div>
+    <!-- Past Speakers Article -->
+    <article>
+      <h2>Past Speakers</h2>
+      <p>Over the years, TechCon has featured keynote addresses by industry icons:</p>
+      <ul>
+        <li>
+          <img src="images/speaker1.jpg" alt="Ada Lovelace" width="100">
+          <p><strong>Ada Lovelace</strong> – Pioneer of computer programming and an advocate for women in STEM.</p>
+        </li>
+        <li>
+          <img src="images/speaker2.jpg" alt="Alan Turing" width="100">
+          <p><strong>Alan Turing</strong> – Known for foundational work in artificial intelligence and computing.</p>
+        </li>
+      </ul>
     </article>
-   </main>
 
-  <!-- Footer -->
+  </main>
+
+  <!-- Footer Section -->
   <footer>
-    <p>Copyright © 2024 TechCon Conference</p>
+    <p>&copy; 2024 TechCon. All rights reserved.</p>
   </footer>
-
 
 </body>
 </html>
+
