--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -1,23 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>Schedule for TechCon 2024</title>
-  <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; }
-    header, nav, main, footer { padding: 20px; }
-    nav ul { list-style: none; display: flex; gap: 15px; padding: 0; }
-    nav a { text-decoration: none; color: #0066cc; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th, td { border: 1px solid #ddd; padding: 10px; text-align: left; }
-    th { background-color: #f2f2f2; }
-    caption { font-weight: bold; margin-bottom: 10px; }
-    footer { background: #f1f1f1; text-align: center; font-size: 0.9em; }
-  </style>
 </head>
-
 <body>
+
   <!-- Header -->
   <header>
     <h1>Schedule for TechCon 2024</h1>
@@ -44,44 +32,29 @@
       </thead>
       <tbody>
         <tr>
-          <td>09:00 - 10:00</td>
-          <td>Opening Keynote: The Future of AI</td>
+          <td>09:00 AM</td>
+          <td>Opening Keynote</td>
           <td>Jane Doe</td>
         </tr>
         <tr>
-          <td>10:15 - 11:00</td>
-          <td>Cybersecurity in a Decentralized World</td>
-          <td>Raj Patel</td>
+          <td>10:30 AM</td>
+          <td>AI in 2024</td>
+          <td>John Smith</td>
         </tr>
         <tr>
-          <td>11:15 - 12:00</td>
-          <td>Tech for Good: Building Inclusive Tools</td>
-          <td>Lina Zhou</td>
-        </tr>
-        <tr>
-          <td>12:00 - 13:00</td>
-          <td>Lunch Break</td>
+          <td>12:00 PM</td>
+          <td>Lunch & Networking</td>
           <td>-</td>
         </tr>
         <tr>
-          <td>13:00 - 14:00</td>
-          <td>Panel: Ethics in Emerging Technologies</td>
+          <td>01:30 PM</td>
+          <td>Cybersecurity Panel</td>
           <td>Multiple Speakers</td>
         </tr>
         <tr>
-          <td>14:15 - 15:00</td>
-          <td>Workshops: Choose Your Track</td>
-          <td>Various</td>
-        </tr>
-        <tr>
-          <td>15:15 - 16:00</td>
-          <td>Fireside Chat: Women in Tech</td>
-          <td>Dr. Angela Morris</td>
-        </tr>
-        <tr>
-          <td>16:15 - 17:00</td>
-          <td>Closing Ceremony & Awards</td>
-          <td>Conference Organizers</td>
+          <td>03:00 PM</td>
+          <td>Future of Web Development</td>
+          <td>Emily Chan</td>
         </tr>
       </tbody>
     </table>
@@ -89,7 +62,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>Copyright © 2024 TechCon Conference</p>
+    <p>&copy; 2024 TechCon. All rights reserved.</p>
   </footer>
 
 </body>
