--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -34,7 +34,7 @@
   
   <!-- Footer -->
   <footer>
-    <p>Copyright © 2024 TechCon Conference</p>
+    <p>copy; © 2024 TechCon Conference</p>
   </footer>
 
 </body>
