--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -54,7 +54,7 @@
 
   </main>
 
-  <!-- Footer Section -->
+  <!-- Footer -->
   <footer>
     <p>&copy; 2024 TechCon. All rights reserved.</p>
   </footer>
