--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -62,7 +62,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 TechCon. All rights reserved.</p>
+    &copy; 2024 TechCon. All rights reserved.
   </footer>
 
 </body>
