--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -49,7 +49,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 TechCon. All rights reserved.</p>
+    &copy; 2024 TechCon. All rights reserved.
   </footer>
 
 </body>
