--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -34,7 +34,7 @@
   
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 TechCon. All rights reserved.</p>
+    &copy; 2024 TechCon. All rights reserved.
   </footer>
 
 </body>
