--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -56,7 +56,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 TechCon. All rights reserved.</p>
+    &copy; 2024 TechCon. All rights reserved.
   </footer>
 
 </body>
