--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -76,8 +76,8 @@
 
   <!-- Footer -->
   <footer>
-    &copy; 2024 TechCon. All rights reserved.
-  </footer>
+  <p>Copyright © 2024 TechCon. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
