--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -33,9 +33,10 @@
   </main>
   
   <!-- Footer -->
-  <footer>
-    &copy; 2024 TechCon. All rights reserved.
-  </footer>
+<footer>
+  <p>Copyright © 2024 TechCon. All rights reserved.</p>
+</footer>
+ 
 
 </body>
 </html>
