--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -61,9 +61,10 @@
   </main>
 
   <!-- Footer -->
-  <footer>
-    &copy; 2024 TechCon. All rights reserved.
-  </footer>
+ 
+<footer>
+  <p>Copyright © 2024 TechCon. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
