--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -63,7 +63,7 @@
   <!-- Footer -->
  
 <footer>
-  <p>Copyright © 2024 TechCon. All rights reserved.</p>
+  Copyright © 2024 TechCon. All rights reserved
 </footer>
 
 </body>
