--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -49,7 +49,7 @@
 
   <!-- Footer -->
   <footer>
-  <p>Copyright © 2024 TechCon. All rights reserved.</p>
+  Copyright © 2024 TechCon. All rights reserved.
 </footer>
 
 </body>
