--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -76,7 +76,7 @@
 
   <!-- Footer -->
   <footer>
-  <p>Copyright © 2024 TechCon. All rights reserved.</p>
+  Copyright © 2024 TechCon. All rights reserved.
 </footer>
 
 </body>
