--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -56,7 +56,7 @@
 
   <!-- Footer -->
 <footer>
-  <p>Copyright © 2024 TechCon. All rights reserved.</p>
+  Copyright © 2024 TechCon. All rights reserved.
 </footer>
 
 
