--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -63,7 +63,7 @@
   <!-- Footer -->
  
 <footer>
-  Copyright © 2024 TechCon. All rights reserved
+  <p>copyright © 2024 TechCon. All rights reserved</p>
 </footer>
 
 </body>
