--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -76,7 +76,7 @@
 
   <!-- Footer -->
   <footer>
-  Copyright © 2024 TechCon. All rights reserved.
+  </p>copyright © 2024 TechCon. All rights reserved.</p>
 </footer>
 
 </body>
