--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -34,7 +34,7 @@
   
   <!-- Footer -->
 <footer>
-</p>copyright © 2024 TechCon. All rights reserved.</p>
+<p>copyright © 2024 TechCon. All rights reserved.</p>
 </footer>
  
 
