--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -18,19 +18,21 @@
       </ul>
     </nav>
   </header>
+<main>
+  <!-- Intro Section -->
+  <section>
+    <h2>Welcome to TechCon 2024</h2>
+    <p>Join us for an exciting technology conference featuring inspiring speakers, interactive workshops, and networking opportunities.</p>
 
-  <main>
-   <section aria-labelledby="conference-intro">
-  <h2 id="conference-intro">Welcome to TechCon 2024</h2>
-  <p>Join us for an exciting technology conference featuring inspiring speakers, interactive workshops, and networking opportunities.</p>
+    <!-- Embedded video using <video> -->
+    <video controls width="640">
+      <source src="53c693c9-a4b6-46f6-8feb-887b11fbab0f.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </section>
+</main>
 
-      <!-- Embedded video using <video> -->
-   <video controls width="640" aria-describedby="video-desc">
-  <source src="53c693c9-a4b6-46f6-8feb-887b11fbab0f.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
-   </section>
-  </main>
+
   
   <!-- Footer -->
 <footer>
